WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41140
SVG polygons should draw polygons up to the first parsing error
https://bugs.webkit.org/show_bug.cgi?id=41140
Summary
SVG polygons should draw polygons up to the first parsing error
Dirk Schulze
Reported
2010-06-24 02:22:40 PDT
SVG polygons should draw polygons upt to first parsing error. This is quite easy to fix. Just remove the line
http://trac.webkit.org/browser/trunk/WebCore/svg/SVGPolyElement.cpp#L71
and the braces arround the if. This needs a simple layouttest. I suggest to use
http://samples.msdn.microsoft.com/ietestcenter/svg112/svg_harness.htm?url=./svg112/svg/chapter_09.8.svg
and ask for the SVGPointListItems. Don't have a mac arround atm, so I can't check if other tests need an update. If someone want's to beat me with a patch, I'm happy to review the fix. :-)
Attachments
Patch
(9.61 KB, patch)
2010-07-04 23:57 PDT
,
Rob Buis
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2010-07-04 23:57:37 PDT
Created
attachment 60498
[details]
Patch
Dirk Schulze
Comment 2
2010-07-05 01:56:57 PDT
Comment on
attachment 60498
[details]
Patch Great fix! ;-) r=me
Rob Buis
Comment 3
2010-07-05 05:07:44 PDT
Landed in
r62478
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug