2010-07-04  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Dirk Schulze.

        SVG polygons should draw polygons up to the first parsing error
        https://bugs.webkit.org/show_bug.cgi?id=41140

        Render polygons up until the first parsing error.

        Test: svg/custom/poly-parsing-error.html

        * svg/SVGPolyElement.cpp:
        (WebCore::SVGPolyElement::parseMappedAttribute):

Canonical link: https://commits.webkit.org/53393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62478 268f45cc-cd09-0410-ab3c-d52691b4dbfc